--- a/examples/expressjs-ethr/views/home.handlebars
+++ b/examples/expressjs-ethr/views/home.handlebars
@@ -4,3 +4,9 @@
 
 DID: {{did}}
 Name: {{name}}
+
+<form>
+  <div><input type="text" id="claimType"/></div>
+  <div><input type="text" id="claimValue"/></div>
+  <div><input type="button" id="sendVC"/></div>
+</form>
